Manually edited version number for v0.3.0

--- a/zmqd_v0.3.0.html
+++ b/zmqd_v0.3.0.html
@@ -118,7 +118,7 @@ snippets that demonstrate the syntax; for more comprehensive and realistic
 examples, please refer to the <a href="http://zguide.zeromq.org/page:all">&#x2205;MQ Guide</a>.
 
 </div>
-<section class="ddoc_section"><h1>Version:</h1><div class="ddoc_paragraphs"> 0.2 (&#x2205;MQ 3.2 compatible)
+<section class="ddoc_section"><h1>Version:</h1><div class="ddoc_paragraphs"><!-- Version number manually edited because I forgot to increment it in the source file. –Lars --> 0.3 (&#x2205;MQ 3.2 compatible)
 </div></section>
 <section class="ddoc_section"><h1>Authors:</h1><div class="ddoc_paragraphs"> <a href="http://github.com/kyllingstad">Lars T. Kyllingstad</a>
 </div></section>
