Freeze docs for v0.4

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>&#x2205;MQD API documentation</h1>
     <ul>
         <li><a href="zmqd.html">master</a></li>
+        <li><a href="zmqd_v0.4.0.html">v0.4.0</a></li>
         <li><a href="zmqd_v0.3.0.html">v0.3.0</a></li>
         <li><a href="zmqd_v0.2.0.html">v0.2.0</a></li>
         <li><a href="zmqd_v0.1.0.html">v0.1.0</a></li>
