--- a/zmqd.html
+++ b/zmqd.html
@@ -945,13 +945,7 @@ occurred.
 </h3></div>
 <div class="declaration-content"><dl><p>An object that encapsulates a &#x2205;MQ message frame.
 </p>
-<p>This <code>struct</code> is a wrapper around a <code>zmq_msg_t</code> object.  Unlike
-<code><a href="#Context">Context</a></code> and <code><a href="#Socket">Socket</a></code>, it does <em>not</em> perform reference
-counting, because &#x2205;MQ messages have a form of reference counting of
-their own.  A <code><span class="symbol-target" id="Frame">&nbsp;</span><a class="symbol-link" href="#Frame">Frame</a></code> cannot be copied by normal assignment; use
-<code><a href="#Frame.copy">Frame.copy()</a></code> for this.
-<br><br>
-
+<p>This <code>struct</code> is a wrapper around a <code>zmq_msg_t</code> object.
 A default-initialized <code><span class="symbol-target" id="Frame">&nbsp;</span><a class="symbol-link" href="#Frame">Frame</a></code> is not a valid &#x2205;MQ message frame; it
 should always be explicitly initialized upon construction using
 <code><a href="#Frame.opCall">Frame.opCall()</a></code>.  Alternatively, it may be initialized later with
@@ -963,7 +957,11 @@ should always be explicitly initialized upon construction using
 </span>msg2.rebuild(2048);         <span class="d_comment">// ...and so does msg2
 </span></pre>
 When a <code><span class="symbol-target" id="Frame">&nbsp;</span><a class="symbol-link" href="#Frame">Frame</a></code> goes out of scope, <code><a href="http://api.zeromq.org/4-0:zmq_msg_close()">zmq_msg_close()</a></code> is
-called on the underlying <code>zmq_msg_t</code>.</p>
+called on the underlying <code>zmq_msg_t</code>.
+<br><br>
+
+A <code><span class="symbol-target" id="Frame">&nbsp;</span><a class="symbol-link" href="#Frame">Frame</a></code> cannot be copied by normal assignment; use <code><a href="#Frame.copy">Frame.copy()</a></code>
+for this.</p>
 </dl>
 <div class="offset1 member-list"><hr><div class="row-fluid declaration"><h3>static @safe Frame <span class="symbol-target" id="opCall">&nbsp;</span><a class="symbol-link" href="#opCall">opCall</a>();
 </h3></div>
