--- a/zmqd.html
+++ b/zmqd.html
@@ -163,7 +163,7 @@ D, and can be found in the
 subdirectory of the &#x2205;MQD source repository.
 
 </p>
-<dt>Version</dt><dd>1.0.0-alpha (compatible with &#x2205;MQ &gt;= 4.0.0)
+<dt>Version</dt><dd>1.0.0-beta (compatible with &#x2205;MQ &gt;= 4.0.0)
 </dd>
 <dt>Authors</dt><dd><a href="http://github.com/kyllingstad">Lars T. Kyllingstad</a>
 </dd>
