Add link to GitHub repo to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>&#x2205;MQD API documentation</h1>
+    <p>Library versions:</p>
     <ul>
         <li><a href="zmqd.html">master</a></li>
         <li><a href="zmqd_v0.5.html">v0.5</a></li>
@@ -14,5 +15,6 @@
         <li><a href="zmqd_v0.2.html">v0.2</a></li>
         <li><a href="zmqd_v0.1.html">v0.1</a></li>
     </ul>
+    <p><a href="https://github.com/kyllingstad/zmqd">Back to GitHub repository</a></p>
 </body>
 </html>
